checking youtube link jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-remote-theme
   - jekyll-feed
+  - jekyll-youtube
 
 #-------------------------------
 # General Site Settings
