--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author: "Sri Sai Nikhith"
 # About Section
 subtitle: Learner <span style="color:#f58506"> Portfolio </span>
 location: "London, UK"
-resume_url: "docs/sample_CV.pdf"
+cv_url: "docs/sample_CV.pdf"
 avatar_image: img/profile_picture_me.png
 
 #-------------------------------
