--- a/_config.yml
+++ b/_config.yml
@@ -9,18 +9,18 @@ plugins:
 
 #-------------------------------
 # General Site Settings
-title: Step8Up Academy
-description: "Hello, everyone. Welcome to Step8Up Learners' Project Works Page. Please visit the official Github & LinkedIn pages of Step8Up.You can also download a Sample CV by using the links below."
+title: Data Analyst and Software Developer
+description: "I have a long-standing passion for computing technology. Due to this passion, I have always been technical, and creative and studied a (Msc) Advanced Multimedia and 3D Technologies at Brunel University I am fascinated by Data, machine learning, and computer games and am currently seeking placement in the industry to utilise my skills and add to my experience"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://step8up.co.uk/" # the base hostname & protocol for your site, e.g. http://example.com
-author: "Sri Sai Nikhith"
+url: "https://darrensmith10.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+author: "Darren Smith"
 
 #-------------------------------
 # About Section
 subtitle: Learner <span style="color:#f58506"> Portfolio </span>
-location: "London, UK"
-cv_url: "docs/sample_CV.pdf"
-avatar_image: img/profile_picture_me.png
+location: "Surrey, UK"
+cv_url: "Darren_Smith_CV_3rd_March_2025.pdf"
+avatar_image: img/DarrenNewProfile.jpg
 
 #-------------------------------
 # Contact links
