Test 5: added some post and effects

--- a/_config.yml
+++ b/_config.yml
@@ -53,3 +53,6 @@ defaults:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+# Include custom CSS file
+include:
+  - assets/css/custom.css
