--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author: "Darren Smith"
 # About Section
 subtitle: Data Analyst and Software Developer <span style="color:#f58506"> Portfolio </span>
 location: "Surrey, UK"
-cv_url: "docs/Darren_Smith_CV_1st_May_2025" # Add your CV URL
+cv_url: "docs/Darren_Smith_CV_1st_May_2025.pdf" # Add your CV URL
 avatar_image: img/DarrenNewProfile.jpg
 
 #-------------------------------
