20th August 2025: Updated Projects

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author: "Darren Smith"
 
 #-------------------------------
 # About Section
-subtitle: Data Analyst and Software Developer <span style="color:#f58506"> Portfolio </span>
+subtitle: Front-End Developer & Data Analyst <span style="color:#f58506"> Portfolio </span>
 location: "Surrey, UK"
 cv_url: "docs/Darren_Smith_CV_11th_August_2025.pdf" # Add your CV URL
 avatar_image: img/DarrenNewProfile.jpg
